syntax = "proto3";

package admin.v1;

option go_package = "droneDeliveryManagement/api/admin/v1;adminv1";

import "api/user/v1/user_service.proto"; // reuse Coordinates and Order

// Drone status for admin operations.
enum DroneStatus {
  DRONE_STATUS_UNSPECIFIED = 0;
  DRONE_STATUS_FIXED = 1;
  DRONE_STATUS_BROKEN = 2;
}

message Drone {
  int64 id = 1;
  string serial_number = 2;
  string name = 3;
  double lat = 4;
  double lng = 5;
  double speed_mph = 6;
  optional int64 assigned_job = 7; // may be unset
  DroneStatus status = 8;
}

message GetOrdersRequest {
  repeated user.v1.Status status_filter = 1;
  optional int64 submitted_by = 2;
  // placement_date range (inclusive). RFC3339 or SQLite "YYYY-MM-DD HH:MM:SS" formats accepted.
  optional string placement_from = 3;
  optional string placement_to = 4;
  int32 page_size = 5;
  string page_token = 6; // opaque; generated by server
}

message GetOrdersResponse {
  repeated user.v1.Order orders = 1;
  string next_page_token = 2;
}

message UpdateOrderLocationRequest {
  int64 order_id = 1;
  user.v1.Coordinates origin = 2;
  user.v1.Coordinates destination = 3;
}

message UpdateOrderLocationResponse {
  user.v1.Order order = 1;
}

message GetDronesRequest {
  optional DroneStatus status = 1; // filter by status if set
  // If true, only drones with assigned_job not null; if false and unassigned_only true, only NULL.
  optional bool assigned_only = 2;
  optional bool unassigned_only = 3;
  // substring match against name or serial_number
  optional string name_or_serial_contains = 4;
  int32 page_size = 5;
  string page_token = 6;
}

message GetDronesResponse {
  repeated Drone drones = 1;
  string next_page_token = 2;
}

message UpdateDroneStatusRequest {
  int64 drone_id = 1;
  DroneStatus status = 2;
}

message UpdateDroneStatusResponse {
  Drone drone = 1;
}

service AdminService {
  rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse);
  rpc UpdateOrderLocation(UpdateOrderLocationRequest) returns (UpdateOrderLocationResponse);
  rpc GetDrones(GetDronesRequest) returns (GetDronesResponse);
  rpc UpdateDroneStatus(UpdateDroneStatusRequest) returns (UpdateDroneStatusResponse);
}
